mpu/.metadata/.plugins/org.eclipse.cdt.ui/racecar_pcb_test.build.log
17:33:55 **** Incremental Build of configuration Debug for project racecar_pcb_test ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/system_stm32h7xx.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32H750xx -c -I../Core/Inc -I../Drivers/STM32H7xx_HAL_Driver/Inc -I../Drivers/STM32H7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32H7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/system_stm32h7xx.d" -MT"Core/Src/system_stm32h7xx.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32h7xx.o"
../Core/Src/system_stm32h7xx.c: In function 'SystemInit':
../Core/Src/system_stm32h7xx.c:437:1: error: expected declaration or statement at end of input
  437 | }
      | ^
At top level:
../Core/Src/system_stm32h7xx.c:340:6: warning: 'SystemCoreClockUpdate' defined but not used [-Wunused-function]
  340 | void SystemCoreClockUpdate (void)
      |      ^~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:41: Core/Src/system_stm32h7xx.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

17:33:56 Build Failed. 2 errors, 1 warnings. (took 469ms)

